--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-monaco": "^1.1.0",
+    "ember-percy": "^1.5.0",
     "ember-prism": "^0.4.0",
     "ember-qunit": "^4.1.2",
     "ember-resolver": "^5.1.3",
