--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "build": "ember build",
     "build-prod": "ember build --environment=production",
-    "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs": "ember-template-lint app/*.hbs",
+    "lint:js": "eslint app/*.js",
     "start": "PREMBER=true ember serve",
     "test": "ember test",
     "prepare-deploy": "rm -rf dist && ember build --environment=production && mv dist/index.html dist/200.html"
