--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint:js": "eslint app/*.js",
     "start": "PREMBER=true ember serve",
     "test": "ember test",
+    "test-at": "ember test --filter='acceptance'",
     "prepare-deploy": "rm -rf dist && ember build --environment=production && mv dist/index.html dist/200.html"
   },
   "devDependencies": {
